<resources>
    <string name="app_name">BusyBag</string>
    <string name="welcome_to_busybag">Welcome to BusyBag</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="your_email">Your Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="password_required">Password required\n</string>
    <string name="password_again">Password again</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="create_a_new_a_ccount">Create a new account</string>
    <string name="category">Category</string>
    <string name="see_more">See More</string>
    <string name="more_category">More Category</string>
    <string name="original_price"><strike>$ %.2f</strike></string>
    <string name="price_double">$ %.2f</string>
    <string name="price">$ %d</string>
    <string name="item_size">Items (%d) </string>
    <string name="flash_sale">Flash Sale</string>
    <string name="it_seems_there_is_no_product_here">It seems there is no product here</string>
    <string name="cart">Cart</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="offer">Offer</string>
    <string name="favorite_product">Favorite Products</string>
    <string name="apply">Apply</string>
    <string name="passwordE">********</string>
    <string name="change_password">Change Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="deleted">Deleted</string>
    <string name="there_is_no_product_here">There is no product here</string>
    <string name="order">Order</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="app_language">App language :</string>
    <string name="your_cart">Your Cart</string>
    <string name="enter_cupon_code">Enter Cupon Code</string>
    <string name="shipping">Shipping</string>
    <string name="import_charges">Import charges</string>
    <string name="total_price">Total Price</string>
    <string name="check_out">Check Out</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="select_color">Select Color</string>
    <string name="specification">Specification</string>
    <string name="review_product">Review Product</string>
    <string name="brand">Brand:</string>
    <string name="categoryI">Category:</string>
    <string name="stock">Stock:</string>
    <string name="we_will_send_verification_to_your_new_email">We Will Send verification to your New Email</string>
    <string name="change_email">Change Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="save">Save</string>
    <string name="_0_result">0 Result</string>
    <string name="back_to_home">Back to Home</string>
    <string name="thank_you_for_shopping_using_busybag">thank you for shopping using BusyBag</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="all_categories">All Categories</string>
    <string name="log_out">Log Out</string>
    <string name="filter_search">Filter Search</string>
    <string name="item_location">Item Location</string>
    <string name="us_only">US Only</string>
    <string name="north_america">North America</string>
    <string name="europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="buying_format">Buying Format</string>
    <string name="all_listings">All Listings</string>
    <string name="accepts_offers">Accepts Offers</string>
    <string name="auction">Auction</string>
    <string name="buy_it_now">Buy It Now</string>
    <string name="classified_ads">Classified Ads</string>
    <string name="price_range">Price Range</string>
    <string name="max">Max</string>
    <string name="condition">Condition</string>
    <string name="yeni" translatable="false">New</string>
    <string name="used">Used</string>
    <string name="not_specified">Not Specified</string>
    <string name="recommended_nproducts">Recommended \nProducts</string>
    <string name="we_recommend_the_best_for_you">We recommend the best for you</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="or">OR</string>
    <string name="succesfully_sign_in">Successfully sign in</string>
    <string name="succesfully_create_user">Successfully create user</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="result">%1$d Result</string>
    <string name="succesfully_log_out">Successfully log out</string>
    <string name="language_selected_as">Language selected as %1$s</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_connection">Please check your connection</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="language">
        <item>Languages</item>
        <item>Aze</item>
        <item>Eng</item>
    </string-array>


    <array name="initial_slider_values">
        <item>200.0</item>
        <item>800.0</item>
    </array>


    <string-array name="product_categories">
        <item>smartphones</item>
        <item>laptops</item>
        <item>fragrances</item>
        <item>skincare</item>
        <item>groceries</item>
        <item>home-decoration</item>
        <item>furniture</item>
        <item>tops</item>
        <item>womens-dresses</item>
        <item>womens-shoes</item>
        <item>mens-shirts</item>
        <item>mens-shoes</item>
        <item>mens-watches</item>
        <item>womens-watches</item>
        <item>womens-bags</item>
        <item>womens-jewellery</item>
        <item>sunglasses</item>
        <item>automotive</item>
        <item>motorcycle</item>
        <item>lighting</item>
    </string-array>

</resources>