<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home_icon"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/exploreFragment"
        android:title="@string/explore"
        android:icon="@drawable/search_icon2"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/cart"
        android:icon="@drawable/cart_icon"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/offer"
        android:icon="@drawable/offer_icon"
        app:showAsAction="always"
        />

    <item
        android:title="@string/account"
        android:icon="@drawable/account_icon"
        app:showAsAction="always"
        />



</menu>