<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.ProfileFragment" >

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider9">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:padding="17dp"
            android:text="@string/profile"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/account_icon"
            app:iconGravity="start"
            app:iconPadding="24dp"
            app:iconSize="20dp"
            app:iconTint="@color/blue"
            app:iconTintMode="src_in"
            app:rippleColor="@color/blue_light"
            app:strokeWidth="0dp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:padding="17dp"
            android:text="@string/order"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/order_icon"
            app:iconGravity="start"
            app:iconPadding="24dp"
            app:iconSize="20dp"
            app:iconTint="@color/blue"
            app:iconTintMode="src_in"
            app:rippleColor="@color/blue_light"
            app:strokeWidth="0dp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:padding="17dp"
            android:text="@string/address"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/location_icon"
            app:iconGravity="start"
            app:iconPadding="24dp"
            app:iconSize="20sp"
            app:iconTint="@color/blue"
            app:iconTintMode="src_in"
            app:rippleColor="@color/blue_light"
            app:strokeWidth="0dp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPayment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:padding="17dp"
            android:text="@string/payment"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/payment_icon"
            app:iconGravity="start"
            app:iconPadding="24dp"
            app:iconTint="@color/blue"
            app:iconTintMode="src_in"
            app:rippleColor="@color/blue_light"
            app:strokeWidth="0dp">

        </com.google.android.material.button.MaterialButton>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView56"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="clip_vertical|start|center_vertical"
                android:text="@string/app_language"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/dropdown_item" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_language_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="clip_vertical|start|center_vertical"
        android:text="@string/account"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

</androidx.constraintlayout.widget.ConstraintLayout>